    <project xmlns="http://maven.apache.org/POM/4.0.0"
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <modelVersion>4.0.0</modelVersion>

        <groupId>com.example</groupId>
        <artifactId>ecse-toy</artifactId>
        <version>1.0.0</version>
        <packaging>jar</packaging>

        <name>ECSE Toy</name>
        <description>Mario speech</description>

        <properties>
            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            <maven.compiler.source>11</maven.compiler.source>
            <maven.compiler.target>11</maven.compiler.target>
        </properties>

        <dependencies>
            
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.10.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.openai</groupId>
                <artifactId>openai-java</artifactId>
                <version>3.4.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.10.1</version>
            </dependency>
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>2.1.1</version>
            </dependency>


            <dependency>
                <groupId>com.sun.speech</groupId>
                <artifactId>freetts</artifactId>
                <version>1.2.2</version>
                <scope>system</scope>
                <systemPath>${project.basedir}/lib/freetts.jar</systemPath>
            </dependency>
            <dependency>
                <groupId>com.sun.speech</groupId>
                <artifactId>cmu_us_kal</artifactId>
                <version>1.2.2</version>
                <scope>system</scope>
                <systemPath>${project.basedir}/lib/cmu_us_kal.jar</systemPath>
            </dependency>
            <dependency>
                <groupId>com.sun.speech</groupId>
                <artifactId>cmulex</artifactId>
                <version>1.2.2</version>
                <scope>system</scope>
                <systemPath>${project.basedir}/lib/cmulex.jar</systemPath>
            </dependency>
            <dependency>
                <groupId>com.sun.speech</groupId>
                <artifactId>cmudict04</artifactId>
                <version>1.2.2</version>
                <scope>system</scope>
                <systemPath>${project.basedir}/lib/cmudict04.jar</systemPath>
            </dependency>
            <dependency>
                <groupId>com.sun.speech</groupId>
                <artifactId>en_us</artifactId>
                <version>1.2.2</version>
                <scope>system</scope>
                <systemPath>${project.basedir}/lib/en_us.jar</systemPath>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>21.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>21.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>21.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>21.0.1</version>
            </dependency>
            <dependency>
                <groupId>com.alphacephei</groupId>
                <artifactId>vosk</artifactId>
                <version>0.3.45</version>
            </dependency>
            
        </dependencies>

        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <mainClass>tts.ChatGeneration</mainClass>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.8</version>
                    <configuration>
                        <mainClass>tts.App</mainClass>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </project>